src/sass/components/_footer.scss
.footer {
  margin-top: 15rem;
  padding-bottom: 1.5rem;

  @media (width <= 640px) {
    margin-top: 10rem;
    display: grid;
    justify-content: center;
  }

  &__gratitude {
    font-size: 1.3rem;

    & span {
      font-style: italic;
      font-family: "Playfair Display", sans-serif;
    }
  }
}

